footer spacing fixed I think...

--- a/styles/home.css
+++ b/styles/home.css
@@ -340,6 +340,10 @@ h3 {
    padding-bottom: 35px;
 }
 
+.project video {
+   padding-bottom: 35px;
+}
+
 .project h4 {
    color: #333333;
     font-size: 12px;
